--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT = 3000
-MONGO_URI = mongodb+srv://SJ:Syed22333@cluster0.skq5rvj.mongodb.net/?retryWrites=true
+MONGO_URI = ''
 Frontend_URI = http://localhost:5173/
 
 # &w=majority&appName=Cluster0
